syntax = "proto3";

option go_package = "proto/booking";

package booking;


service BookingService{
  rpc AddUnavailability(AddUnavailabilityRequest) returns(AddUnavailabilityResponse) {}
  rpc FilterAvailableAccommodation(FilterAvailableAccommodationRequest) returns(FilterAvailableAccommodationResponse) {}
}

message AddUnavailabilityRequest {
  string id = 1;
}

message AddUnavailabilityResponse {
}

message FilterAvailableAccommodationRequest {
  repeated string accommodationIds = 1;
  string startDate = 2;
  string endDate = 3;
}

message FilterAvailableAccommodationResponse {
  repeated string accommodationIds = 1;
}
